tools/tests/errors/surf_num_05.ki
# Integer() of non-numeric text must throw a clear conversion error.
discard Integer("not a number")
